--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
     <div class='fb-like' data-href='http://works.ioa.tw/OA-markerClustering/' data-send='false' data-layout='button_count' data-action='like' data-show-faces='false' data-share='true'></div>
     <a id='show_comment'>顯示留言</a>
+    <a id='about' href='about.html'>製作說明</a>
 
     <div id='maps_comments_panel'>
       <div class='cover'></div>
