--- a/about.html
+++ b/about.html
@@ -109,15 +109,15 @@
           <p><a href='http://works.ioa.tw/OA-markerClustering/' target='_blank'>OA's Marker Clustering</a> 主要規則就是利用 Google Maps 在不同的放大視角(以下以 zoom 代稱)時產生 <b>集合 Marker</b>，而這些 Marker 用來代表著是多數 Marker 集合。如下圖 1 是 zoom 為 16 時的狀況圖，地圖上分別有 A、B 以及 C 三個點，而圖 2 代表在 zoom 為 13 時，因為地圖視角拉遠了，所以造成 A 與 B 互相太靠近，所以必須隱藏 B 只顯示 A，所以作法如圖 3，產生一個 集合 Marker 放置在 A 的位置，並且記錄著數量為 2。</p>
           
           <div class='pictures n3'>
-            <figure href='https://github.com/comdan66/OA-markerClustering/about.html#&gid=1&pid=0&id=0'>
+            <figure href='http://works.ioa.tw/OA-markerClustering/about.html#&gid=1&pid=0&id=0'>
               <img alt="地圖 zoom 為 16 時的狀況圖" src='img/about/01.png' />
               <figcaption data-description='zoom 為 16 時的狀況圖，地圖上分別有 A、B 以及 C 三個點。'>圖 1. 地圖 zoom 為 16 時的狀況圖</figcaption>
             </figure>
-            <figure href='https://github.com/comdan66/OA-markerClustering/about.html#&gid=1&pid=1&id=0'>
+            <figure href='http://works.ioa.tw/OA-markerClustering/about.html#&gid=1&pid=1&id=0'>
               <img alt="地圖 zoom 為 13 時 A、B 靠太近" src='img/about/02.png' />
               <figcaption data-description='地圖視角 zoom 為 13 時，因為視角拉遠所以造成 A 與 B 互相太靠近。'>圖 2. 地圖 zoom 為 13 時 A、B 靠太近</figcaption>
             </figure>
-            <figure href='https://github.com/comdan66/OA-markerClustering/about.html#&gid=1&pid=2&id=0'>
+            <figure href='http://works.ioa.tw/OA-markerClustering/about.html#&gid=1&pid=2&id=0'>
               <img alt="因靠太近，故隱藏 B 只顯示 A" src='img/about/03.png' />
               <figcaption data-description='因靠太近，故隱藏 B 只顯示 A，產生一個 集合 Marker 放置在 A 的位置，並且記錄著數量為 2。'>圖 3. 因靠太近，故隱藏 B 只顯示 A</figcaption>
             </figure>
