--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
           <span><p>OA Wu 的個人 Marker Clustering 實作</p><div class='fb-like' data-href='http://works.ioa.tw/OA-markerClustering/' data-send='false' data-layout='button_count' data-action='like' data-show-faces='false' data-share='true'></div></span>
         </header>
         <section>
-          <p>各位 Google Maps JavaScript API 的玩家都應該有過 Marker 太多時，當 Maps 視角一拉遠時，全部 Marker 擠在一起的困擾吧！沒錯 OA's Marker Clustering 就是要來處理這個困擾！</p>
+          <p>各位 <a href='https://developers.google.com/maps/documentation/javascript/tutorial?hl=zh-tw' target='_blank'>Google Maps JavaScript API</a> 的玩家都應該有過 <a href='https://developers.google.com/maps/documentation/javascript/markers?hl=zh-tw' target='_blank'>Marker</a> 太多時，當 Maps 視角一拉遠時，全部 Marker 擠在一起的困擾吧！沒錯 <a href='https://github.com/comdan66/OA-markerClustering' target='_blank'>OA's Marker Clustering</a> 就是要來處理這個困擾！</p>
           <p>或許你/妳會問，市面上也有很多關於 Marker Clustering 的 Library，那又何必自己時做一套呢！？原因很簡單，因為自己做的比較能夠掌握概況，視需求去做調整，不用一大包的 code，到底怎麼跑的都摸不透，並且加以利用做出自己想要的功能！</p>
           <p>如果試著 Google 關於 Marker Clustering 的文章都會找到 <a href='https://developers.google.com/maps/documentation/javascript/marker-clustering' target='_blank'>Marker Clustering</a> 此篇，而官網上也都推崇 <a href='https://github.com/googlemaps/js-marker-clusterer' target='_blank'>這套</a> Library，這套我也開發過，甚至改過其功能，但是最後我還是自己刻了屬於自己的 <a href='http://works.ioa.tw/OA-markerClustering/' target='_blank'>Marker Clustering</a> 來制定當不同的 集合 Marker 時可以使用不同呈現方式！以下就是一些功能介紹、演算方法說明。</p>
         </section>
